// protoc --proto_path=/home/at15/workspace/src/:. --gogo_out=plugins=grpc:. rpc.proto
syntax = "proto3";

package benchubcentralrpc;

option go_package = "grpc";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/benchhub/benchhub/pkg/common/commonpb/types.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;


service BenchHubCentral {
    rpc Ping (bhcommon.Ping) returns (bhcommon.Pong) {
    }
    rpc NodeInfo (bhcommon.NodeInfoReq) returns (bhcommon.NodeInfoRes) {
    }

    rpc RegisterAgent (bhcommon.RegisterAgentReq) returns (bhcommon.RegisterAgentRes) {
    }
    rpc AgentHeartbeat (bhcommon.AgentHeartbeatReq) returns (bhcommon.AgentHeartbeatRes) {
    }
    rpc ListAgent (bhcommon.ListAgentReq) returns (bhcommon.ListAgentRes) {
    }
    rpc SubmitJob (bhcommon.SubmitJobReq) returns (bhcommon.SubmitJobRes) {
    }
}